5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1637_2446.log
== TEST (2019-04-11 10:50:13) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000)//10000
print(c)
d = (((numero % 1000000) % 100000)%10000)//1000
print(d)
e = (((numero % 1000000) % 100000)%10000)%1000//100
print(e)
f = ((((numero % 1000000) % 100000)%10000)%1000%100)//10
print(f)
-- OUTPUT:
0
0
8
7
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:45) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000)//10000
print(c)
d = (((numero % 1000000) % 100000)%10000)//1000
print(d)
e = (((numero % 1000000) % 100000)%10000)%1000%100
print(e)
f = ((((numero % 1000000) % 100000)%10000)%1000%100)//10
print(f)
-- OUTPUT:
0
0
8
7
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:51:04) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000)//10000
print(c)
d = (((numero % 1000000) % 100000)%10000)//1000
print(d)
e = (((numero % 1000000) % 100000)%10000)%1000//100
print(e)
f = ((((numero % 1000000) % 100000)%10000)%1000%100)%10
print(f)
-- OUTPUT:
0
0
8
7
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:51:16) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000)//10000
print(c)
d = (((numero % 1000000) % 100000)%10000)//1000
print(d)
e = (((numero % 1000000) % 100000)%10000)%1000//100
print(e)
f = ((((numero % 1000000) % 100000)%10000)%1000%100)%10
print(f)
-- OUTPUT:
0
0
8
7
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:51:28) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000)//10000
print(c)
d = (((numero % 1000000) % 100000)%10000)//1000
print(d)
e = (((numero % 1000000) % 100000)%10000)%1000//100
print(e)
f = ((((numero % 1000000) % 100000)%10000)%1000%100)//10
print(f)
-- OUTPUT:
0
0
8
7
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:12:43) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
x = b + d + e
y = a + c + f
 if(x%y==0):
		print("senha valida")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 11
    if(x%y==0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:13:07) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
x = b + d + e
y = a + c + f

if(x%y == 0):
		print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:13:40) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
		print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:20:54) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(y%x == 0):
		print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:21:06) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(y%x == 0):
		print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:07) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
		print("acesso liberado")
else:
	print("senha nao liberado")
-- OUTPUT:
0
1
senha nao liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:25) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000

c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
		print("acesso liberado")
else:
	print("senha nao liberado")
-- OUTPUT:
senha nao liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:22:50) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
		print("acesso liberado")
else:
	print("senha nao liberado")
-- EXECUTION TIME:
0.136272
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha nao liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha nao liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha nao liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:03) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
		print("acesso liberado")
else:
	print("senha nao liberado")
-- OUTPUT:
senha nao liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:23:27) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
		print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.153796
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:35) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:23:41) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.229183
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:01) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
b = (numero % 1000000) // 100000
c = ((numero % 1000000) % 100000) // 10000
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:02) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10

x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
0
8
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:12) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
print(d)
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
print(e)
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
0
8
7
6
1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:28) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
print(d)
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
print(e)
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 14
    print(f)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:37) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
print(d)
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
print(e)
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 14
    print(f)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:48) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
print(d)
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
print(e)
f = ((((numero % 1000000) % 100000) % 10000)%1000)%100
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
0
8
7
6
12
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:23) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
print(d)
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
print(e)
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
0
8
7
6
1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:33) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 1000000) // 100000
print(b)
c = ((numero % 1000000) % 100000) // 10000
print(c)
d = (((numero % 1000000) % 100000) % 10000)//1000
print(d)
e = ((((numero % 1000000) % 100000) % 10000)%1000)//100
print(e)
f = (((((numero % 1000000) % 100000) % 10000)%1000)%100)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
0
8
7
6
1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:18) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)%10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:45) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)%10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:29:30) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 10000) // 1000
print(b)
c = ((numero % 10000) % 1000) // 100
print(c)
d = (((numero % 10000) % 1000) % 100)//10
print(d)
e = ((((numero % 10000) % 1000) % 100)%10)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
7
6
1
0
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:29:50) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:30:08) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 1000000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)//10
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:30:39) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)
print(f)
x = b + d + e
y = a + c + f

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:44) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)
print(f)
x = b + d + f
y = a + c +e

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:32:57) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)
print(f)
x = b + d + f
y = a + c +e

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.141912
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
8
7
6
1
2
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
7
6
0
8
3
4
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
1
2
2
9
6
7
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:33:04) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)
print(f)
x = b + d + f
y = a + c + e

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
7
6
1
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:33:14) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000
print(a)
b = (numero % 100000) // 10000
print(b)
c = ((numero % 100000) % 10000) // 1000
print(c)
d = (((numero % 100000) % 10000) % 1000)//100
print(d)
e = ((((numero % 100000) % 10000) % 1000)%100)//10
print(e)
f = (((((numero % 100000) % 10000) % 1000)%100)%10)
print(f)
x = b + d + f
y = a + c + e

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.182591
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
8
7
6
1
2
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
7
6
0
8
3
4
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
1
2
2
9
6
7
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:34:09) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000

b = (numero % 100000) // 10000

c = ((numero % 100000) % 10000) // 1000

d = (((numero % 100000) % 10000) % 1000)//100

e = ((((numero % 100000) % 10000) % 1000)%100)//10

f = (((((numero % 100000) % 10000) % 1000)%100)%10)

x = b + d + f
y = a + c + e

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.145305
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Digite a senha: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Digite a senha: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:34:16) 
-- CODE:
numero = int(input("Digite a senha: "))

a = numero // 100000

b = (numero % 100000) // 10000

c = ((numero % 100000) % 10000) // 1000

d = (((numero % 100000) % 10000) % 1000)//100

e = ((((numero % 100000) % 10000) % 1000)%100)//10

f = (((((numero % 100000) % 10000) % 1000)%100)%10)

x = b + d + f
y = a + c + e

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.183286
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
